--- a/views/registration/indexCodepen.ejs
+++ b/views/registration/indexCodepen.ejs
@@ -134,6 +134,7 @@ body {
           </form>
         </div>
       </div>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
       <script>
         $(document).ready(function(e) {   
     // your code here
