--- a/views/events.ejs
+++ b/views/events.ejs
@@ -22,6 +22,7 @@
             </div>
             <nav class="navbar1">
                 <div class="hamburger1" id="hamburger1">
+                    
                     <div class="bar1"></div>
                     <div class="bar1"></div>
                     <div class="bar1"></div>
@@ -55,9 +56,9 @@
                   <input id="input" type="text" placeholder="Search">
                 </div>
                 <div class="list">
-                <div onclick = "find2(this.className)" class="athletics" id="athletics">
+                <div onclick = "find2(this.className)" class="carom" id="athletics">
                         <img src="../images/events-imgs/Untitled/Vector.png" class="image_athletics" id="image">
-                        Athletics
+                    Carom
                       
                     </div>
                 <div class="badminton" onclick = "find2(this.className)">
@@ -104,10 +105,10 @@
                         <img src="../images/events-imgs/Untitled/mdi_volleyball.png" class="image_volleyball" id="image">
                         Volleyball
                     </div>
-                <div class="Weightlifting" onclick = "find2(this.className)">
+                <!-- <div class="Weightlifting" onclick = "find2(this.className)">
                         <img src="../images/events-imgs/Untitled/cil_weightlifitng.png" class="image_weightlifting" id="image">
                         Weightlifting
-                    </div>
+                    </div> -->
                 <div class="yoga"onclick = "find2(this.className)">
                         <img src="../images/events-imgs/Untitled/grommet-icons_yoga.png" class="image" id="image">
                         Yoga
@@ -130,7 +131,7 @@
                     <div>
                         <div>
                             <ul>
-                                <li class="athletics" onclick = "find2(this.className)"><a href="#">Athletics</a></li>
+                                <li class="carom" onclick = "find2(this.className)"><a href="#">Carom</a></li>
                                 <li class="badminton" onclick = "find2(this.className)" ><a href="#">Badminton</a></li>
                                 <li class="basketball" onclick = "find2(this.className)"><a href="#">Basketball</a></li>
                                 <li class="chess" onclick = "find2(this.className)"><a href="#">Chess</a></li>
@@ -140,8 +141,9 @@
                                   <li class="khokho" onclick = "find2(this.className)"><a href="#">Kho-Kho</Kho-Kho></a></li>
                                   <li class="squash" onclick = "find2(this.className)"><a href="#">Squash</a></li>
                                   <li class="tabletennis" onclick = "find2(this.className)"><a href="#">Table Tennis</a></li>
+                                  <li class="lawntennis" onclick = "find2(this.className)"><a href="#">Lawn Tennis</a></li>
                                   <li class="volleyball" onclick = "find2(this.className)"><a href="#">Volleyball</a></li>
-                                  <li class="Weightlifting" onclick = "find2(this.className)"><a href="#">Weightlifting</a></li>
+                                  <!-- <li class="Weightlifting" onclick = "find2(this.className)"><a href="#">Weightlifting</a></li> -->
                                   <li class="yoga" onclick = "find2(this.className)"><a href="#">Yoga</a></li>
                                   
                             </ul>
@@ -150,7 +152,6 @@
                 </div>
               </div>             
             </div>
-              
             <div class="sportinfo">
                 <div class="sportname">Basketball</div>
                 <div class="maincard">
@@ -213,17 +214,17 @@
                      </div>
                      <div class="bars bars-men">
                         <div class="sportnameLEAD">BasketBall(Mens)</div>
-                         <a href="" class="rectangle">IIT Guwahati</a>
-                         <a href="" class="rectangle">IIT Guwahati</a>
-                         <a href="" class="rectangle">IIT Guwahati</a>
-                         <a href="" class="rectangle">IIT Guwahati</a>
+                         <a href="" class="rectangle men_ranking">IIT Guwahati</a>
+                         <a href="" class="rectangle men_ranking">IIT Guwahati</a>
+                         <a href="" class="rectangle men_ranking">IIT Guwahati</a>
+                         <a href="" class="rectangle men_ranking">IIT Guwahati</a>
                      </div>
                      <div class="sportnameLEAD">BasketBall(Womens)</div>
                      <div class="bars bars-women">
-                         <a href="" class="rectangle">IIT Guwahati</a>
-                         <a href="" class="rectangle">IIT Guwahati</a>
-                         <a href="" class="rectangle">IIT Guwahati</a>
-                         <a href="" class="rectangle">IIT Guwahati</a>
+                         <a href="" class="rectangle women_ranking">IIT Guwahati</a>
+                         <a href="" class="rectangle women_ranking">IIT Guwahati</a>
+                         <a href="" class="rectangle women_ranking">IIT Guwahati</a>
+                         <a href="" class="rectangle women_ranking">IIT Guwahati</a>
                      </div>
                  </div>
                 </div>
