--- a/views/events.ejs
+++ b/views/events.ejs
@@ -56,9 +56,9 @@
                   <input id="input" type="text" placeholder="Search">
                 </div>
                 <div class="list">
-                <div onclick = "find2(this.className)" class="carom" id="athletics">
+                <div onclick = "find2(this.className)" class="athletics" id="athletics">
                         <img src="../images/events-imgs/Untitled/Vector.png" class="image_athletics" id="image">
-                    Carom
+                    Athletics
                       
                     </div>
                 <div class="badminton" onclick = "find2(this.className)">
@@ -105,10 +105,10 @@
                         <img src="../images/events-imgs/Untitled/mdi_volleyball.png" class="image_volleyball" id="image">
                         Volleyball
                     </div>
-                <!-- <div class="Weightlifting" onclick = "find2(this.className)">
+                <div class="Weightlifting" onclick = "find2(this.className)">
                         <img src="../images/events-imgs/Untitled/cil_weightlifitng.png" class="image_weightlifting" id="image">
                         Weightlifting
-                    </div> -->
+                    </div>
                 <div class="yoga"onclick = "find2(this.className)">
                         <img src="../images/events-imgs/Untitled/grommet-icons_yoga.png" class="image" id="image">
                         Yoga
@@ -131,7 +131,7 @@
                     <div>
                         <div>
                             <ul>
-                                <li class="carom" onclick = "find2(this.className)"><a href="#">Carom</a></li>
+                                <li class="athletics" onclick = "find2(this.className)"><a href="#">Athletics</a></li>
                                 <li class="badminton" onclick = "find2(this.className)" ><a href="#">Badminton</a></li>
                                 <li class="basketball" onclick = "find2(this.className)"><a href="#">Basketball</a></li>
                                 <li class="chess" onclick = "find2(this.className)"><a href="#">Chess</a></li>
@@ -143,7 +143,7 @@
                                   <li class="tabletennis" onclick = "find2(this.className)"><a href="#">Table Tennis</a></li>
                                   <li class="lawntennis" onclick = "find2(this.className)"><a href="#">Lawn Tennis</a></li>
                                   <li class="volleyball" onclick = "find2(this.className)"><a href="#">Volleyball</a></li>
-                                  <!-- <li class="Weightlifting" onclick = "find2(this.className)"><a href="#">Weightlifting</a></li> -->
+                                  <li class="Weightlifting" onclick = "find2(this.className)"><a href="#">Weightlifting</a></li>
                                   <li class="yoga" onclick = "find2(this.className)"><a href="#">Yoga</a></li>
                                   
                             </ul>
