--- a/views/registration/indexCodepen.ejs
+++ b/views/registration/indexCodepen.ejs
@@ -164,14 +164,14 @@ body {
           <!-- <a href="/auth/google">
             Google Sign In
           </a> -->
-          <a href="/auth/google">
+          <!-- <a href="/auth/google">
             <div class="google-btn">
               <div class="google-icon-wrapper">
                 <img class="google-icon" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
               </div>
               <p class="btn-text"><b>Sign in with google</b></p>
             </div>
-          </a>
+          </a> -->
           <form class="login-form" action="/login" method="POST">
             <input type="email" name="email" placeholder="email address"/>
             <input type="password" name="password" placeholder="password"/>
