prasad changes news

--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -10,6 +10,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../favicon_io/favicon-16x16.png">
     <link rel="manifest" href="../favicon_io/site.webmanifest">
+    <!-- prasad -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--prem-->
@@ -312,7 +315,8 @@
 </div>
 
 </footer>
-<div class="footer">
+
+<!-- <div class="footer">
             
     <div id="foot_1">
         <div>
@@ -337,9 +341,85 @@
         </ul>
     </div>
     <div class="con">
-        <a href="#"><h1>Contact</h1></a>
+        <ul class="ql" id="ql">
+            <li><h1>Contact</h1></li>
+            <li> <h3>xyz-6969696969</h3></li>
+            <li><h3>pqr-6969696969</h3></li>
+        </ul>
+       
+       
+          
     </div>
-</div>
+</div> -->
+
+
+
+<footer class="footer">
+            
+    <div id="foot_1">
+        <div>
+            <img src="/images/Frame 120.png" alt="spirit.">
+        </div>
+        <div class="foot-text">
+            Copyright &copy; 2023 Spirit, Sports Board, IIT Guwahati: <br>
+            All rights reserved
+        </div>
+        <!-- <br> -->
+        <div class="apps">
+            <a href="https://instagram.com/spirit_iitguwahati?igshid=MzRlODBiNWFlZA==" target="_blank"><img src="images/Vector.png" alt="insta"></a>
+            <a href="https://www.facebook.com/spiritiitg/" target="_blank"><img src="images/vectorf.png.png" alt="fb"></a>
+            <a href="https://www.youtube.com/@spiritiitguwahati2541" target="_blank"><img src="images/Vectory.png" alt="youtube"></a>
+        </div>
+    </div>
+    <div class="qlinks">
+        <label for="ql"><h1>Quick Links</h1></label>
+        <ul class="ql" id="ql">
+            <li><a href="/">Home</a></li>
+            <li><a href="/events">Events</a></li>
+            <li><a href="/about-us">About Us</a></li>
+        </ul>
+    </div>
+    <div class="con">
+        <a href="#"><h1>Contact</h1></a>
+        <h3>xyz-6202959215</h3>
+        <h3>pqr-6202959215</h3>
+    </div>
+</footer>
+
+<!-- <div class="container text-center footer finalfooter " background-color="red">
+  
+    <div class="row ">
+      <div class="col foot_1">
+        <div>
+            <img src="images/Frame 120.png" alt="spirit.">
+        </div>
+        <div class="foot-text">
+            Copyright &copy; 2023 Spirit, Sports Board, IIT Guwahati: <br>
+            All rights reserved
+        </div>
+        <div class="apps">
+            <a href="#"><img src="images/Vector.png" alt="insta"></a>
+            <a href="#"><img src="images/vectorf.png.png" alt="fb"></a>
+            <a href="#"><img src="images/Vectory.png" alt="youtube"></a>
+        </div>
+      </div>
+
+      <div class="col qlinks">
+        <label for="ql"><h1>Quick Links</h1></label>
+        <ul class="ql" id="ql">
+            <li><a href="../../Landing-page/Spirit-LandingPage/index.html">Home</a></li>
+            <li><a href="../../Event-page/eventspage-master/eventspage/index.html">Events</a></li>
+            <li><a href="index.html">About Us</a></li>
+        </ul>
+      </div>
+
+      <div class="col con">
+        <a href="#"><h1>Contact</h1></a>
+        <h3>xyz-6969696969</h3>
+          <h3>pqr-6969696969</h3>
+      </div>
+    </div>
+  </div> -->
 
 
 
