--- a/views/index.ejs
+++ b/views/index.ejs
@@ -205,8 +205,9 @@
       <h3 class="h3"></h3>
       <p class="des3">Spirit captures a plethora of thrilling stage performances, adding to the sheen of the fest!</p>
     </div>
-      <img src="C:\Users\Adhikansh\Downloads\image 4.png" id="img_style4" alt="aqauaaa"></img>
+       <img src="C:\Users\Adhikansh\Downloads\image 4.png" id="img_style4" alt="aqauaaa"></img>
   </div>
+  
 
 </div>
 </div>
@@ -309,6 +310,8 @@
       </div>
       <div class="con">
           <a href="#"><h1>Contact</h1></a>
+          <h3>xyz-6202959215</h3>
+          <h3>pqr-6202959215</h3>
       </div>
   </footer>
 
@@ -317,6 +320,6 @@
   crossorigin="anonymous">
   </script>
 <script src="../js/lpageScript.js"></script>
-    
+<script src="../js/script.js"></script> 
 </body>
 </html>
