--- a/public/css/LandingPage.css
+++ b/public/css/LandingPage.css
@@ -811,10 +811,11 @@ header {
   width: 70vw;
   overflow: hidden;
   background-size: cover;
+  object-fit:cover;
 }
 .h1 {
   margin-top: 0;
-  font-size: 2vw;
+  font-size: 1.75vw;
   color: white;
   padding: 1vw;
   font-family: satoshi;
@@ -828,7 +829,7 @@ header {
 }
 .h2 {
   margin-top: 0;
-  font-size: 2vw;
+  font-size: 1.75vw;
   color: white;
   padding: 1vw;
   font-family: satoshi;
@@ -842,7 +843,7 @@ header {
 }
 .h3 {
   margin-top: 0;
-  font-size: 2vw;
+  font-size: 1.75vw;
   color: white;
   padding: 1vw;
   font-family: satoshi;
@@ -940,9 +941,10 @@ header {
   }
   .des0 {
     height: 25vw;
+    font-size: small;
   }
   .news_text1 {
-    font-size: 3vw;
+    font-size: 2vw;
     height: 50vw;
     margin-top: 2%;
   }
@@ -974,7 +976,7 @@ header {
     width: 100%;
   }
   .h1 {
-    font-size: 4vw;
+    font-size: 1vw;
   }
 }
 
