--- a/public/css/about-us.css
+++ b/public/css/about-us.css
@@ -11,9 +11,13 @@ footer {
   padding: 0 35px;
   align-items: center;
   justify-content: center;
- 
- 
+  
 }
+
+finalfooter {
+  width: 100%;
+}
+
 .wrapper {
   max-width: 1100px;
   width: 100%;
